fix middle position of choose a file icon on firefox

--- a/dating/frontend/style/_forms.scss
+++ b/dating/frontend/style/_forms.scss
@@ -216,8 +216,9 @@
 
     & > div {
         text-align: center;
-        position: relative;
+        position: absolute;
         top: calc(50% - 1.4rem);
+		left: calc(50% - 5rem);
     }
 
     input {
